objects/IntegraServiceSettings__c/fields/DocumentDownloadURL__c.field-meta.xml
<CustomField>
    <fullName>DocumentDownloadURL__c</fullName>
    <defaultValue>&quot;https://uatsfdcintegration.integratelecom.com/DocumentDownload.svc/?documentID={documentID}&amp;salesForceSessionID={salesForceSessionID}&amp;apiUrl={apiUrl}&quot;</defaultValue>
    <description>URL for downloading documents</description>
    <inlineHelpText>https://uatsfdcintegration.integratelecom.com/DocumentDownload.svc/?documentID={documentID}&amp;salesForceSessionID={salesForceSessionID}&amp;apiUrl={apiUrl}</inlineHelpText>
    <label>DocumentDownloadURL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>