objects/IntegraServiceSettings__c/fields/Environment_URL_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Environment_URL_Prefix__c</fullName>
    <label>Environment URL Prefix</label>
    <length>20</length>
    <type>Text</type>
</CustomField>