objects/IntegraServiceSettings__c/fields/No_Serving_LSO_Task_Owner__c.field-meta.xml
<CustomField>
    <fullName>No_Serving_LSO_Task_Owner__c</fullName>
    <label>No Serving LSO Task Owner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>